--- a/README
+++ b/README
@@ -4,7 +4,9 @@ MSIM 1.5.0 -- Machine Simulator
 To compile and install:
 ./configure && make install
 
-This codebase has been derived from the MSIM 1.4.0 [1] (which originally
+This codebase has been derived from the MSIM 1.4.0 [1][2] (which originally
 stood for MIPS Simulator). It currently simulates the MIPS R4000 CPU.
 
 [1] http://d3s.mff.cuni.cz/~holub/sw/msim/
+[2] https://github.com/D-iii-S/msim
+
