--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,6 @@
 Viliam Holub	<holub@d3s.mff.cuni.cz>
 Martin Decky	<martin@decky.cz>
 Tomas Martinec	<martinec@d3s.mff.cuni.cz>
+Vojtech Horky	<horky@d3s.mff.cuni.cz>
+Petr Tuma	<tuma@d3s.mff.cuni.cz>
+
